--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -60,7 +60,7 @@
           <p class="p-font text-center">Situé à l’intérieur du <strong>village naturiste du Cap d'Agde</strong>, Vibes Resort
             profite d’un emplacement à la fois incontournable et incomparable, comme un véritable signal d’entrée.</p>
 
-          <p class="p-font text-center mb-4">Cette <strong>résidence de luxe à vocation touristique</strong> abrite
+          <p class="p-font text-center mb-4">Ce <strong>programme neuf de luxe à vocation touristique</strong> abrite
           appartements privés, piscine et jacuzzis, bar lounge
           et restaurant, sur une terrasse panoramique à la vue imprenable. Un véritable appel au lâcher prise et à la volupté sur fond azur !</p>
 
@@ -68,7 +68,7 @@
 
         <div class="col-xs-12 col-sm-12 col-lg-5 col-md-6" style="background-color:#10384E;height:34em; align-items:center;display:flex;">
 
-          <p class="my-4 mx-4" style="font-size:30px; color:white; font-weight:lighter; text-align:center;"> Cette <span style="font-weight:600;">résidence de tourisme de luxe</span> est idéale pour valoriser votre patrimoine, avec une <span style="font-weight:600;">rentabilité prévisionnelle entre 5 et 6 %</span> et la récupération possible de la TVA*.<br><br>
+          <p class="my-4 mx-4" style="font-size:30px; color:white; font-weight:lighter; text-align:center;"> Cette <span style="font-weight:600;">résidence de tourisme de luxe</span> est idéale pour valoriser votre patrimoine, avec une <span style="font-weight:600;">rentabilité prévisionnelle entre 5 et 6 %</span><br> et la récupération possible <br>de la TVA*.<br><br>
           <%= link_to "Télécharger la plaquette", new_plaquette_path, class:"primary-btn visibleBorderLeftRight", id:"village"%></p>
 
 
