--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
   <header id="header">
     <div class="bs-example">
         <nav class="navbar navbar-expand-md navbar-light bg-white">
-          <%= image_tag 'vibes-resort-logo22.png', style:"width:15%; padding-top:3em;"%>
+          <%= image_tag 'vibes-resort-logo.png', style:"width:15%; padding-top:3em;"%>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
