add pixel grouporama

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,26 @@
 
     </script>
 
+    <!-- Activity name for this tag: Traceur Groupe Immo Angeloti -->
+
+    <script>
+
+      (function() {
+
+        var a = String(Math.floor(Math.random() * 10000000000000000));
+
+        new Image().src = 'https://pubads.g.doubleclick.net/activity;xsp=4830864;ord='+ a +'?';
+
+      })();
+
+    </script>
+
+    <noscript>
+
+      <img src='https://pubads.g.doubleclick.net/activity;xsp=4830864;ord=1?' width=1 height=1 border=0>
+
+    </noscript>
+
   <%end%>
 
 
