--- a/app/views/plaquette/new.html.erb
+++ b/app/views/plaquette/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row align-items-center">
 
-  <div class="d-none d-lg-block col-xs-12 col-sm-12 col-lg-6 col-md-12" style="background-image:url(<%= asset_path 'vibes-resort-3.webp' %>); background-position: center right; min-height:100vh;">
+  <div class="d-none d-lg-block col-xs-12 col-sm-12 col-lg-6 col-md-12" style="background-image:url(<%= asset_path 'vibes-resort2.jpg' %>); background-position: center left; min-height:100vh; background-size:cover;">
 
   </div>
 
@@ -8,7 +8,7 @@
   <div class="col-xs-12 col-sm-12 col-lg-6 col-md-12">
 
     <div class="container" style="width:90%;">
-      <h1 class="pb-4" style="margin-top:4em; ">Téléchargez la plaquette interactive de Vibes Resort</h1>
+      <h2 class="pb-4" style="margin-top:4em; ">Téléchargez la plaquette interactive de Vibes Resort</h2>
 
 
           <% flash.each do |type, msg| %>
@@ -44,14 +44,14 @@
           </div>
           <div class="col-md-10 align-items-center">
 
-            <div class="submit-button">
-              <%= submit_tag "Valider", class:"btn-get-started", style:"border-radius:20px;" %>
+            <div class="">
+              <%= submit_tag "Valider", class:"btn btn-primary", style:"border-radius:20px;" %>
               <%end%>
 
             </div>
           </div>
 
-          <p class="p-font4 p-4" style="margin-bottom:4em;"> <i>*En remplissant et en soumettant ce formulaire, vous acceptez de partager avec nous vos données personnelles dans le cadre de votre demande de téléchargement de notre plaquette indiquée dans ce formulaire. Aucun autre traitement ne sera effectué avec vos informations.</i></p>
+          <p class="p-font4 p-4" style="margin-bottom:4em; font-size:10px;"> <i>*En remplissant et en soumettant ce formulaire, vous acceptez de partager avec nous vos données personnelles dans le cadre de votre demande de téléchargement de notre plaquette indiquée dans ce formulaire. Aucun autre traitement ne sera effectué avec vos informations.</i></p>
       </div>
       </div>
 
