--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,12 +10,7 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  *= require bootstrap.min
- *= require animate.min
- *= require venobox
- *= require owl.carousel.min
- *= require aos
- *= require style
+ *= require paper-kit
+ *= require_tree .
  */
