--- a/app/views/plaquette/show.html.erb
+++ b/app/views/plaquette/show.html.erb
@@ -7,14 +7,14 @@
   <div class="col-6">
 
     <div class="container">
-      <h1 class="pb-4">Téléchargez la plaquette intéractive<br> de Vibes Resort</h1>
+      <h2 class="pb-4">Téléchargez la plaquette intéractive<br> de Vibes Resort</h2>
 
       <p class="p-font pt-4 pb-4">Pour télécharger la plaquette intéractive de notre résidence Vibes Resort située au Cap d'Agde, veuillez cliquer sur le bouton ci-dessous.  </p>
     </div>
 
-      <div class="container text-center">
-        <%= link_to "Télécharger la plaquette", asset_path("plaquette-vibes-resort.pdf"), target: "_blank", class:"btn-get-started animate__animated animate__fadeInUp scrollto" %>
-        <%= link_to "Contactez-nous", root_path(anchor:"contact"), class:"btn-invers animate__animated animate__fadeInUp scrollto" %>
+      <div class="container ">
+        <%= link_to "Télécharger la plaquette", asset_path("plaquette-vibes-resort.pdf"), target: "_blank", class:"btn btn-primary mr-4" %>
+        <%= link_to "Contactez-nous", root_path(anchor:"contact"), class:"btn btn-primary-outline" %>
       </div>
 
   </div>
