--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -136,7 +136,7 @@
 
         <img src="<%= asset_path 'vibes-resort-logo-or.png' %>"style="height:5em;width:auto;"/>
 
-        <p class="mt-4 mb-3" style="font-size:13px;">Une opération commercialisée par <a style="font-size:13px;" href="https://www.angelotti.fr/" class="a-nav2">Le Groupe Immobilier ANGELOTTI</a></p>
+        <p class="mt-4 mb-3" style="font-size:13px;">Une opération commercialisée par <br><a style="font-size:13px;" href="https://www.angelotti.fr/" class="a-nav2">Le Groupe Immobilier ANGELOTTI</a></p>
 
         <p class="mt-4 mb-3" style="font-size:13px;">Suivez-nous sur :</p>
         <a class="a-nav" href="https://fr-fr.facebook.com/groupe.angelotti" target="_blank"><i class="fab fa-facebook fa-2x mr-4"></i></a><a class="a-nav" href="https://fr.linkedin.com/company/angelotti-promotion" target="_blank"><i class="fab fa-2x fa-linkedin"></i></a>
