edit jpg to webp

--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -88,7 +88,7 @@
 
       <div class="col-lg-6 text-center">
 
-        <%=image_tag("vibes-resort1.jpg", class:"image-pers")%>
+        <%=image_tag("vibes-resort-cap-agde1.webp", class:"image-pers")%>
 
 
       </div>
@@ -112,7 +112,7 @@
 
       <div class="col-lg-6 text-center ">
 
-        <%=image_tag("vibes-resort4.jpg", class:"image-pers2", style:" ")%>
+        <%=image_tag("vibes-resort4.webp", class:"image-pers2", style:" ")%>
 
 
       </div>
@@ -171,7 +171,7 @@
 
       <div class="col-lg-6 text-center ">
 
-        <%=image_tag("vibes-resort3.jpg", style:"", class:"image-pers")%>
+        <%=image_tag("vibes-resort-terrasse-2.webp", style:"", class:"image-pers")%>
 
 
       </div>
@@ -186,7 +186,7 @@
 
 
 
-<section class="container row mx-auto maquette-content" style="background-image:url(<%= asset_path 'wave.png' %>);">
+<section class="container row mx-auto maquette-content" style="background-image:url(<%= asset_path 'wave.webp' %>);">
 
       <div class="container row my-4 py-4 mx-auto" style="display:flex;align-items:center; ">
         <div class="col-md-6">
@@ -222,7 +222,7 @@
       <div class="col-md-3 my-4" >
 
           <div class="">
-            <%=image_tag("esquisse1.jpg", class:"img-esquisse")%>
+            <%=image_tag("esquisse1.webp", class:"img-esquisse")%>
           </div>
 
           <div class="enfant2">
@@ -236,7 +236,7 @@
       <div class="col-md-3 my-4" >
 
         <div class="">
-          <%=image_tag("esquisse2.jpg", class:"img-esquisse")%>
+          <%=image_tag("esquisse2.webp", class:"img-esquisse")%>
         </div>
 
         <div class="enfant2">
@@ -250,7 +250,7 @@
       <div class="col-md-3 my-4" >
 
         <div class="">
-          <%=image_tag("esquisse3.jpg", class:"img-esquisse")%>
+          <%=image_tag("esquisse3.webp", class:"img-esquisse")%>
         </div>
 
         <div class="enfant2">
@@ -304,7 +304,7 @@
       <div class="col-md-6 text-center mt-4">
 
       <a href="<%=new_plaquette_path%>">
-        <%=image_tag("plaquette-vibes-resort2.png", style:"width:110%;height:auto; margin-top:4em;")%>
+        <%=image_tag("plaquette-vibes-resort2.webp", style:"width:100%;height:auto; margin-top:4em;")%>
       </a>
 
       </div>
@@ -323,7 +323,7 @@
 
       <div class=" col-3">
 
-        <%=image_tag("clients.png", style:"width:30%;height:auto;")%>
+        <%=image_tag("clients.webp", style:"width:30%;height:auto;")%>
         <p class="pt-4">Accueil des clients</p>
 
       </div>
@@ -331,7 +331,7 @@
 
       <div class=" col-3">
 
-        <%=image_tag("dejeuner.png", style:"width:30%;height:auto;")%>
+        <%=image_tag("dejeuner.webp", style:"width:30%;height:auto;")%>
         <p class="pt-4">Petit déjeuner</p>
 
       </div>
@@ -339,7 +339,7 @@
 
       <div class=" col-3">
 
-        <%=image_tag("linge.png", style:"width:30%;height:auto;")%>
+        <%=image_tag("linge.webp", style:"width:30%;height:auto;")%>
         <p class="pt-4">Fourniture du linge</p>
 
       </div>
@@ -347,7 +347,7 @@
 
       <div class="col-3">
 
-        <%=image_tag("menage.png", style:"width:30%;height:auto;")%>
+        <%=image_tag("menage.webp", style:"width:30%;height:auto;")%>
         <p class="pt-4">Nettoyage quotidien des locaux</p>
 
       </div>
