edit jpg to webp

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -161,11 +161,11 @@
 
         <div class="row">
 
-          <%=image_tag("vibes-resort1.jpg", class:"col-4 d-none d-md-block img-nav")%>
-          <%=image_tag("vibes-resort-cap-agde2.jpg", class:"col-4 d-none d-md-block img-nav")%>
+          <%=image_tag("vibes-resort1.webp", class:"col-4 d-none d-md-block img-nav")%>
+          <%=image_tag("vibes-resort-cap-agde2.webp", class:"col-4 d-none d-md-block img-nav")%>
           <%=image_tag("vibes-resort2.jpg", class:"col-4 d-none d-md-block img-nav")%>
-          <%=image_tag("vibes-resort3.jpg", class:"mt-4 col-4 d-none d-md-block img-nav")%>
-          <%=image_tag("vibes-resort4.jpg", class:"mt-4 col-4 d-none d-md-block img-nav")%>
+          <%=image_tag("vibes-resort-terrasse-2.webp", class:"mt-4 col-4 d-none d-md-block img-nav")%>
+          <%=image_tag("vibes-resort4.webp", class:"mt-4 col-4 d-none d-md-block img-nav")%>
           <%=image_tag("cap-agde.png", class:"mt-4 col-4 d-none d-md-block img-nav")%>
 
         </div>
