--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -6,11 +6,8 @@
     <div class="filter"></div>
     <div class="content-center">
       <div class="container">
-        <div class="title-brand">
-          <h1 class="presentation-title"> </h1>
-        </div>
-        <p class="presentation-subtitle text-center white pb-4" ><strong>DEVENEZ PROPRIÉTAIRE D’UN LOGEMENT DANS UNE RÉSIDENCE DE TOURISME DE LUXE</strong><br>
-        ET INVESTISSEZ AU SEIN DU PLUS GRAND VILLAGE NATURISTE D’EUROPE.</p>
+        <h1 class="presentation-title white small">DEVENEZ PROPRIÉTAIRE D’UN LOGEMENT DANS UNE RÉSIDENCE DE TOURISME DE LUXE</h1><h2 class="presentation-subtitle text-center white pb-4" >
+        ET INVESTISSEZ AU SEIN DU PLUS GRAND VILLAGE NATURISTE D’EUROPE.</h2>
         <div class="text-center mt-4">
           <a href="https://maquettes-toutela3d.fr/angelotti/vibes/bat-all.html" target="_blank" class="btn btn-primary-outline mr-2 mb-4">Maquette virtuelle</a>
           <%= link_to "Télécharger la plaquette", new_plaquette_path, class: "btn btn-primary ml-2 mb-4" %>
@@ -18,6 +15,7 @@
         </div>
       </div>
     </div>
+
 
     <p class="category category-absolute d-none d-md-block" style="  color: #d0b178;">Cette résidence de tourisme de luxe est idéale pour valoriser votre patrimoine, <br>avec une rentabilité prévisionnelle entre 5 et 7 % et la récupération possible de la TVA*.
     </p>
@@ -34,13 +32,14 @@
 
     <div class="row d-flex justify-content-between align-items-center mt-4 pt-4" >
 
+
       <div class="col-md-5 my-4 py-4 px-4">
 
-        <h3 class="h3-trait">Le Village </h3>
+        <h3 class="h3-trait">L'emplacement idéal</h3>
 
-        <h2>Le Cap d'Agde</h2>
+        <h2>Le village du Cap d'Agde</h2>
 
-        <p class="mt-4 pt-4 dark">Situé à l’intérieur du village naturiste du Cap d'Agde, Vibes Resort profite d’un emplacement à la fois incontournable et incomparable, comme un véritable signal d’entrée.</p>
+        <p class="mt-4 pt-4 dark">Situé à l’intérieur du village naturiste du Cap d'Agde, la résidence de tourime Vibes Resort profite d’un emplacement à la fois incontournable et incomparable, comme un véritable signal d’entrée.</p>
 
         <p class="pt-4 dark">Ce <span class="bold" >programme neuf de luxe à vocation touristique</span> abrite appartements privés, piscine et jacuzzis, bar lounge et restaurant, sur une terrasse panoramique à la vue imprenable. Un véritable appel au lâcher prise et à la volupté sur fond azur !</p>
 
@@ -48,7 +47,7 @@
 
       <div class="col-md-6 text-center mt-4">
 
-        <%=image_tag("cap-agde2.png", style:"width:110%;height:auto; margin-top:4em;", class:"d-none d-md-block")%>
+        <%=image_tag("cap-agde2.png", style:"width:110%;height:auto; margin-top:4em;", class:"d-none d-md-block", alt:"le cap d'agde")%>
 
 
       </div>
@@ -72,9 +71,9 @@
 
       <div class="col-lg-5 pl-4 ml-4">
 
-          <h3 class="h3-trait  py-4 pl-4 ">L'Architecture </h3>
+          <h3 class="h3-trait  py-4 pl-4 ">Le mouvement de la vague </h3>
 
-          <h2 class="pl-4">Le mouvement de la vague</h2>
+          <h2 class="pl-4">Le concept architectural</h2>
 
           <p class="mt-4 pt-4 pl-4">Signé par l’agence montpelliéraine A+ Architecture, le concept architectural de cette résidence neuve de luxe trouve son origine dans le mouvement de la vague. </p>
 
@@ -88,7 +87,7 @@
 
       <div class="col-lg-6 text-center">
 
-        <%=image_tag("vibes-resort-cap-agde1.webp", class:"image-pers")%>
+        <%=image_tag("vibes-resort-cap-agde1.webp", class:"image-pers", alt:"residence neuve Vibes Resort le cap d'agde")%>
 
 
       </div>
@@ -112,7 +111,7 @@
 
       <div class="col-lg-6 text-center ">
 
-        <%=image_tag("vibes-resort4.webp", class:"image-pers2", style:" ")%>
+        <%=image_tag("vibes-resort4.webp", class:"image-pers2", alt:"Appartement neuf Vibes Resort - le cap d'agde")%>
 
 
       </div>
@@ -120,9 +119,9 @@
 
       <div class="col-lg-6 px-4 ">
 
-        <h3 class="h3-trait px-4">Les Appartements </h3>
+        <h3 class="h3-trait px-4">Un confort incomparable </h3>
 
-        <h2 class="px-4">Un confort de grand standing</h2>
+        <h2 class="px-4">Les appartements privés </h2>
 
         <p class="mt-4 pt-4 px-4">Rejoignez vos appartements privés et profitez d’un confort de grand standing, que l’on a aussi plaisir à faire partager. Des chambres T1 aux suites 4 pièces, les appartements de Vibes Resort ont ce petit quelque chose en plus qui les rend tellement irrésistibles.</p>
 
@@ -155,9 +154,9 @@
 
       <div class="col-lg-5 pl-4 ml-4 ">
 
-        <h3 class="h3-trait px-4">Le Rooftop </h3>
+        <h3 class="h3-trait px-4">La douceur du sud</h3>
 
-        <h2 class="px-4">La douceur du Sud s'offre à vous</h2>
+        <h2 class="px-4">Le rooftop, avec vue panoramique</h2>
 
         <p class="mt-4 pt-4 px-4">À l’intérieur de la résidence, c’est le domaine privé du luxe et de l’hédonisme. Avec vue panoramique sur le village naturiste, Port Ambonne et la Méditerranée, le rooftop de Vibes Resort est une île privée, où le temps qui passe se déguste avec raffinement.</p>
 
@@ -171,7 +170,7 @@
 
       <div class="col-lg-6 text-center ">
 
-        <%=image_tag("vibes-resort-terrasse-2.webp", style:"", class:"image-pers")%>
+        <%=image_tag("vibes-resort-terrasse-2.webp", style:"", class:"image-pers", alt:"Rooftop résidence Vibes Resort le cap d'agde")%>
 
 
       </div>
@@ -190,7 +189,7 @@
 
       <div class="container row my-4 py-4 mx-auto" style="display:flex;align-items:center; ">
         <div class="col-md-6">
-          <p class="big-text">Découvrez la maquette virtuelle du Vibes Resort dès maintenant </P>
+          <p class="big-text">Découvrez la maquette virtuelle de Vibes Resort dès maintenant </p>
         </div>
 
         <div class="col-md-6 text-center">
@@ -222,7 +221,7 @@
       <div class="col-md-3 my-4" >
 
           <div class="">
-            <%=image_tag("esquisse1.webp", class:"img-esquisse")%>
+            <%=image_tag("esquisse1.webp", class:"img-esquisse", alt:"Appartement T1 Vibes Resort le cap d'agde")%>
           </div>
 
           <div class="enfant2">
@@ -236,7 +235,7 @@
       <div class="col-md-3 my-4" >
 
         <div class="">
-          <%=image_tag("esquisse2.webp", class:"img-esquisse")%>
+          <%=image_tag("esquisse2.webp", class:"img-esquisse", alt:"Logements T3 Vibes Resort Le Cap d'Agde")%>
         </div>
 
         <div class="enfant2">
@@ -250,7 +249,7 @@
       <div class="col-md-3 my-4" >
 
         <div class="">
-          <%=image_tag("esquisse3.webp", class:"img-esquisse")%>
+          <%=image_tag("esquisse3.webp", class:"img-esquisse", alt:"Suite duplex residence Vibes Resort le cap d'agde")%>
         </div>
 
         <div class="enfant2">
@@ -286,7 +285,7 @@
 
       <div class="col-md-5 pl-4">
 
-        <h3 class="h3-trait">Devenir Propritétaire </h3>
+        <h3 class="h3-trait">Devenir propritétaire </h3>
 
         <h2>L'investissement para-hôtelier : de nombreux avantages</h2>
 
@@ -304,7 +303,7 @@
       <div class="col-md-6 text-center mt-4">
 
       <a href="<%=new_plaquette_path%>">
-        <%=image_tag("plaquette-vibes-resort2.webp", style:"width:100%;height:auto; margin-top:4em;")%>
+        <%=image_tag("plaquette-vibes-resort2.webp", style:"width:100%;height:auto; margin-top:4em;", alt:"plaquette residence Vibes Resort Cap d'Agde")%>
       </a>
 
       </div>
@@ -323,7 +322,7 @@
 
       <div class=" col-3">
 
-        <%=image_tag("clients.webp", style:"width:30%;height:auto;")%>
+        <%=image_tag("clients.webp", style:"width:30%;height:auto;", alt:"pictogramme regime para-hotelier")%>
         <p class="pt-4">Accueil des clients</p>
 
       </div>
@@ -331,7 +330,7 @@
 
       <div class=" col-3">
 
-        <%=image_tag("dejeuner.webp", style:"width:30%;height:auto;")%>
+        <%=image_tag("dejeuner.webp", style:"width:30%;height:auto;", alt:"pictogramme regime para-hotelier")%>
         <p class="pt-4">Petit déjeuner</p>
 
       </div>
@@ -339,7 +338,7 @@
 
       <div class=" col-3">
 
-        <%=image_tag("linge.webp", style:"width:30%;height:auto;")%>
+        <%=image_tag("linge.webp", style:"width:30%;height:auto;", alt:"pictogramme regime para-hotelier")%>
         <p class="pt-4">Fourniture du linge</p>
 
       </div>
@@ -347,7 +346,7 @@
 
       <div class="col-3">
 
-        <%=image_tag("menage.webp", style:"width:30%;height:auto;")%>
+        <%=image_tag("menage.webp", style:"width:30%;height:auto;", alt:"pictogramme regime para-hotelier")%>
         <p class="pt-4">Nettoyage quotidien des locaux</p>
 
       </div>
