--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <html>
 <head>
 
-  <title>Vibes Resort | Résidence de luxe au village naturiste du Cap d'Agde</title>
+  <title>Vibes Resort | Résidence de tourisme de luxe au Cap d'Agde</title>
 
 
   <%= csrf_meta_tags %>
@@ -15,7 +15,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
 
-  <meta name="description" content="Découvrez Vibes Resort, nouvelle résidence de standing à vocation touristique située dans le village naturiste du Cap d'Agde. De la chambre T1 à la suite 4 pièces. Contactez-nous !" />
+  <meta name="description" content="Vibes Resort, résidence de luxe à vocation touristique située dans le village naturiste du Cap d'Agde. Programme neuf, de la chambre T1 à la suite 4 pièces." />
 
   <script src="https://kit.fontawesome.com/2f609438b2.js" crossorigin="anonymous"></script>
 
@@ -88,7 +88,7 @@
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand" href="<%=root_path%>" rel="tooltip" title="Vibes Resort - Résidence neuve Cap d'Agde" data-placement="bottom">
-          <img src="<%= asset_path 'vibes-resort-logo.png' %>"style="height:5em;width:auto;"/>
+          <img src="<%= asset_path 'vibes-resort-logo-or.png' %>" style="height:5em;width:auto;" alt="logo vibes resort cap d'agde"/>
         </a>
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-bar bar1"></span>
@@ -161,12 +161,12 @@
 
         <div class="row">
 
-          <%=image_tag("vibes-resort1.webp", class:"col-4 d-none d-md-block img-nav")%>
-          <%=image_tag("vibes-resort-cap-agde2.webp", class:"col-4 d-none d-md-block img-nav")%>
-          <%=image_tag("vibes-resort2.jpg", class:"col-4 d-none d-md-block img-nav")%>
-          <%=image_tag("vibes-resort-terrasse-2.webp", class:"mt-4 col-4 d-none d-md-block img-nav")%>
-          <%=image_tag("vibes-resort4.webp", class:"mt-4 col-4 d-none d-md-block img-nav")%>
-          <%=image_tag("cap-agde.png", class:"mt-4 col-4 d-none d-md-block img-nav")%>
+          <%=image_tag("vibes-resort1.webp", class:"col-4 d-none d-md-block img-nav", alt:"residence neuve Vibes Resort Cap d'Agde")%>
+          <%=image_tag("vibes-resort-cap-agde2.webp", class:"col-4 d-none d-md-block img-nav", alt:"programme neuf Vibes Resort Cap d'Agde")%>
+          <%=image_tag("vibes-resort2.jpg", class:"col-4 d-none d-md-block img-nav", alt:"residence touristique neuve Vibes Resort Cap d'Agde")%>
+          <%=image_tag("vibes-resort-terrasse-2.webp", class:"mt-4 col-4 d-none d-md-block img-nav", alt:"rooftop residence neuve Vibes Resort Cap d'Agde")%>
+          <%=image_tag("vibes-resort4.webp", class:"mt-4 col-4 d-none d-md-block img-nav", alt:"appartement neuf T1 au T4 Cap d'Agde")%>
+          <%=image_tag("cap-agde.png", class:"mt-4 col-4 d-none d-md-block img-nav", alt:"village naturiste Cap d'Agde")%>
 
         </div>
 
@@ -177,14 +177,8 @@
         <h4 class="my-4 py-4 primary">Contactez-nous</h4>
 
         <p class="pt-3 primary"><i class="fas fa-phone"></i> 04 67 57 11 26</p>
-        <p class="pt-4 pb-3">Une résidence de tourisme de luxe est idéale pour valoriser votre patrimoine, avec une rentabilité prévisionnelle entre 5 et 7 % et la récupération possible de la TVA*.</p>
+        <p class="pt-4 pb-3">Cette résidence de tourisme de luxe à vocation touristique est idéale pour valoriser votre patrimoine, avec une rentabilité prévisionnelle entre 5 et 7 % et la récupération possible de la TVA*.</p>
 
-        <% if user_signed_in?%>
-          <span class="p-font4"><%= link_to "Back-Office", rails_admin_path, class:"pr-4 a-nav" %></span>
-          <span class="p-font4"><%= link_to "Se déconnecter", destroy_user_session_path, class:"pr-4 a-nav" , method: :delete%></span>
-        <%else%>
-          <p class="p-font4"><%= link_to "Se connecter", user_session_path , class:"pr-4 a-nav" %></p>
-        <%end%>
 
       </div>
 
@@ -204,6 +198,14 @@
       </div>
       <div class="credits-2 ml-3 mt-2">
         Rentabilité donnée à titre indicatif et sous conditions. La location sous le régime de la parahôtellerie nécessite la mise en œuvre d’au moins trois des prestations suivantes : fourniture du petit-déjeuner, nettoyage régulier des locaux, fourniture du linge de maison, réception de la clientèle. Elle permet la récupération intégrale de la TVA (20%) payée lors de l’acquisition du bien, sous condition d’engagement de location. Comme tout investissement, investir dans l’immobilier peut présenter des risques – Tarifs indiqués TTC, incluant une TVA récupérable de 20%, dans la limite des stocks disponibles.
+      </div>
+      <div class="credits-2 ml-3 mt-2">
+      <% if user_signed_in?%>
+        <span class="p-font4"><%= link_to "Back-Office", rails_admin_path, class:"pr-4 a-nav" %></span>
+        <span class="p-font4"><%= link_to "Se déconnecter", destroy_user_session_path, class:"pr-4 a-nav" , method: :delete%></span>
+      <%else%>
+        <p class="p-font4"><%= link_to "Se connecter", user_session_path , class:"pr-4 a-nav" %></p>
+      <%end%>
       </div>
     </div>
   </footer><!-- End Footer -->
