--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
 
-  <meta name="description" content="Vibes Resort, résidence de luxe à vocation touristique située dans le village naturiste du Cap d'Agde. Programme neuf, de la chambre T1 à la suite 4 pièces." />
+  <meta name="description" content="Vibes Resort, résidence de luxe à vocation touristique située dans le village naturiste du Cap d'Agde. Programme neuf, de la chambre T1 à la suite T4." />
 
   <script src="https://kit.fontawesome.com/2f609438b2.js" crossorigin="anonymous"></script>
 
