--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -6,7 +6,8 @@
     <div class="filter"></div>
     <div class="content-center">
       <div class="container">
-        <h1 class="presentation-title white small">DEVENEZ PROPRIÉTAIRE D’UN LOGEMENT DANS UNE RÉSIDENCE DE TOURISME DE LUXE</h1><h2 class="presentation-subtitle text-center white pb-4" >
+        <h1 class="presentation-title white small">DEVENEZ PROPRIÉTAIRE D’UN LOGEMENT DANS UNE RÉSIDENCE DE TOURISME DE LUXE</h1>
+        <h2 class="presentation-subtitle text-center white pb-4" >
         ET INVESTISSEZ AU SEIN DU PLUS GRAND VILLAGE NATURISTE D’EUROPE.</h2>
         <div class="text-center mt-4">
           <a href="https://maquettes-toutela3d.fr/angelotti/vibes/bat-all.html" target="_blank" class="btn btn-primary-outline mr-2 mb-4">Maquette virtuelle</a>
@@ -17,7 +18,7 @@
     </div>
 
 
-    <p class="category category-absolute d-none d-md-block" style="  color: #d0b178;">Cette résidence de tourisme de luxe est idéale pour valoriser votre patrimoine, <br>avec une rentabilité prévisionnelle entre 5 et 7 % et la récupération possible de la TVA*.
+    <p class="category category-absolute d-none d-md-block" style="color: #d0b178;">Cette résidence de tourisme de luxe est idéale pour valoriser votre patrimoine, <br>avec une rentabilité prévisionnelle entre 5 et 7 % et la récupération possible de la TVA*.
     </p>
 
   </div>
@@ -117,7 +118,7 @@
       </div>
 
 
-      <div class="col-lg-6 px-4 ">
+      <div class="col-lg-6 px-4">
 
         <h3 class="h3-trait px-4">Un confort incomparable </h3>
 
