modification page plaquette

--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -76,7 +76,7 @@
 
           <h2 class="pl-4">Le concept architectural</h2>
 
-          <p class="mt-4 pt-4 pl-4">Signé par l’agence montpelliéraine A+ Architecture, le concept architectural de cette résidence neuve de luxe trouve son origine dans le mouvement de la vague. </p>
+          <p class="mt-4 pt-4 pl-4">Signé par l’agence montpelliéraine <a href="https://www.aplus-architecture.com/projets/selection/">A+ Architecture</a>, le concept architectural de cette résidence neuve de luxe trouve son origine dans le mouvement de la vague. </p>
 
           <p class="pt-4 pl-4">L’ondulation des lignes évoque, dans une forme résolument futuriste à l’esthétisme pur, le mouvement perpétuel de la mer et le charme de l’éternel féminin.</p>
 
