--- a/app/views/plaquette/show.html.erb
+++ b/app/views/plaquette/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row align-items-center">
 
-  <div class="col-6" style="background-image:url(<%= asset_path 'vibes-resort-3.webp' %>); background-position: center right; min-height:100vh;">
+  <div class="col-6" style="background-image:url(<%= asset_path 'vibes-resort2.jpg' %>); background-position: left right; min-height:100vh;">
 
   </div>
 
