modifications button maquette virtuelle

--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -80,7 +80,7 @@
 
           <p class="pt-4 pl-4">L’ondulation des lignes évoque, dans une forme résolument futuriste à l’esthétisme pur, le mouvement perpétuel de la mer et le charme de l’éternel féminin.</p>
 
-          <a href="https://maquettes-toutela3d.fr/angelotti/vibes/bat-all.html" target="_blank" class="btn btn-primary mt-4 mb-4 ml-4"><i class="fas fa-chevron-right"></i>  Découvrir la maquette virtuelle</a>
+          <a href="https://maquettes-toutela3d.fr/angelotti/vibes/bat-all.html" target="_blank" class="btn btn-primary mt-4 mb-4 ml-4">  Découvrir la maquette virtuelle</a>
 
 
 
